compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__prelude__qualified_error.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/prelude.rs
assertion_line: 23
expression: "import gleam\npub fn go() { gleam.Error(1) }\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Error(1) }


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go() {
  return new $gleam.Error(1);
}
