compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__prelude__qualified_nil.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/prelude.rs
assertion_line: 32
expression: "import gleam\npub fn go() { gleam.Nil }\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Nil }


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go() {
  return undefined;
}
