compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__prelude__qualified_nil_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/prelude.rs
assertion_line: 41
expression: "import gleam\npub fn go() { gleam.Nil }\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Nil }


----- TYPESCRIPT DEFINITIONS
export function go(): undefined;
