compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__prelude__qualified_ok_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/prelude.rs
assertion_line: 14
expression: "import gleam\npub fn go() { gleam.Ok(1) }\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub fn go() { gleam.Ok(1) }


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(): _.Result<number, any>;
