compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__prelude__qualified_prelude_value_does_not_conflict_with_local_value_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/prelude.rs
assertion_line: 85
expression: "\nimport gleam\n\npub type Result(a, e) {\n  Ok(a)\n  Error(e)\n}\n\npub fn go(x) {\n  case x {\n    gleam.Ok(x) -> x\n    gleam.Error(_) -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

pub type Result(a, e) {
  Ok(a)
  Error(e)
}

pub fn go(x) {
  case x {
    gleam.Ok(x) -> x
    gleam.Error(_) -> 0
  }
}


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { CustomType as $CustomType } from "../gleam.mjs";

export class Ok extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export const Result$Ok = ($0) => new Ok($0);
export const Result$isOk = (value) => value instanceof Ok;
export const Result$Ok$0 = (value) => value[0];

export class Error extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export const Result$Error = ($0) => new Error($0);
export const Result$isError = (value) => value instanceof Error;
export const Result$Error$0 = (value) => value[0];

export function go(x) {
  if (x instanceof $gleam.Ok) {
    let x$1 = x[0];
    return x$1;
  } else {
    return 0;
  }
}
